# west-standard-names

./: .gitignore  README.md  macros.py  main.py  mkdocs.yml  pyproject.toml  setup_structure.py
.github/workflows/: docs.yml
docs/: index.md  overview.md  standard-names.md
docs/names/: area_of_poloidal_magnetic_field_probe.md  area_of_toroidal_magnetic_field_probe.md  atomic_mass_number_of_isotope.md  brightness_from_soft_xray_detector.md  capacitance_of_ion_cyclotron_heating_antenna_matching_element.md  central_wavelength_of_spectral_line_from_spectrometer.md  cold_neutral_fraction_of_isotope.md  cold_neutral_temperature_of_isotope.md  cross_sectional_area_of_flux_surface.md  cross_sectional_area_of_plasma_boundary.md  current_amplitude_from_ion_cyclotron_heating_antenna.md  current_from_passive_loop.md  current_from_poloidal_field_coil.md  diamagnetic_flux.md  distance_to_conductor_from_antenna_strap.md  effective_charge.md  electron_count.md  electron_density.md  electron_line_averaged_density_from_interferometer_beam.md  electron_line_integrated_density_from_interferometer_beam.md  electron_pressure.md  electron_temperature.md  electron_volume_averaged_density.md  elongation_of_plasma_boundary.md  equilibrium_reconstruction_weight_of_faraday_rotation_angle_constraint.md  equilibrium_reconstruction_weight_of_flux_loop_constraint.md  equilibrium_reconstruction_weight_of_poloidal_magnetic_field_probe_constraint.md  etendue_of_soft_xray_detector.md  f_multiplied_by_poloidal_flux_derivative_of_f.md  fit_chi_squared_of_electron_temperature.md  flux_surface_area.md  (+200 more)
site/: 404.html  index.html  sitemap.xml
v0.1/: 404.html  index.html  sitemap.xml
(+453 files in other folders)
